# mcp-servers

./: Dockerfile  README.md  package-lock.json  pyproject.toml
.cursor/rules/: 03-composer-agent.rules.mdc  docker.mdc  mcp-server.mdc  mermaid-server.mdc  solid-server.mdc
scripts/: deploy_integrated_system.py  generate_documentation.py
src/common/: config_manager.py  diagram_generator.py  server_configs.py
src/everything/: package.json
src/git/: README.md
src/git/src/mcp_server_git/: __init__.py  server.py
src/git/tests/: test_server.py
src/github/: package.json
src/kde-launcher/: Dockerfile.kde-launcher  README.md  TESTING.md  TODO.md  __init__.py  kde_launcher_server.py  test_kde_launcher.py
src/mcp_prompt_manager/: __init__.py  __main__.py  prompt_manager_server.py
src/mermaid/: Dockerfile  Dockerfile.mermaid  README.md  __init__.py  demo.py  e2e_test.py  integration.md  mermaid-server.py  mermaid_server.py
src/mermaid/demo_output/: generated_diagram.mmd  theme_dark.mmd  theme_default.mmd  theme_pastel.mmd  theme_vibrant.mmd
src/orchestrator/: Dockerfile  README.md  __init__.py  add_project_orchestration_template.py  code_diagram_orchestrator.py  enhanced_orchestrator.py  router_integration.py  test_project_orchestration_template.py
src/postgres/: README.md
src/prompt-manager/: Dockerfile  Makefile  PROMPT_MANAGER_USAGE.md  README.md  SETUP.md  build-clean.sh  build-container.sh  build-fixed.sh  build.sh  check-package.sh  docker-compose.yml  mcp-prompt-manager.service  run_server.py  setup-dev.sh  setup.py  test-server.js  update-claude-config.sh
src/prompt-manager/examples/: config.json
src/prompt-manager/examples/templates/: metadata.json  tutorial.md
src/prompt-manager/src/mcp_prompt_manager/: __init__.py  __main__.py  cli.py  config.py  fix_stdio.py  fixed_server.py  prompt_manager_server.py  prompt_manager_server.py.fixed  templates.py
src/prompt-manager/tests/: __init__.py  test_prompt_manager.py
src/redis/: package.json
src/solid/: Dockerfile.solid  README.md  __init__.py  solid-server.py  solid_server.py
src/solid-code-review/: solid-server.py
src/system-context/: system-context.py
src/xpra/: .gitignore  README.md  package.json  pyproject.toml  requirements.txt  setup.py  xpra-server.py
src/xpra/examples/: README.md  test_client.py  test_vnc_client.py
src/xpra/mcp_xpra_server/: __init__.py  __main__.py  config.py  config_loader.py  exceptions.py  monitoring.py  schemas.py  server.py  session.py
src/xpra/mcp_xpra_server/utils/: __init__.py  logging.py  system.py
src/xpra/tests/: conftest.py  test_server.py
tests/: TESTING.md  docker-compose.yml  run_e2e_tests.sh  test_claude_integration.py  test_entry_point.py  test_kde_launcher_server.py  test_mermaid_server.py  test_orchestrator.py  test_server.py  test_solid_server.py
