[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-xpra-server"
version = "0.1.1"
description = "MCP server for managing Xpra sessions"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Sparrow", email = "sparrow@example.com"}
]
dependencies = [
    "mcp>=1.0.0",
    "anthropic>=0.3.0",
    "python-dotenv>=0.19.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Systems Administration"
]

[project.scripts]
mcp-xpra = "mcp_xpra_server.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "ruff>=0.0.2",
    "mypy>=1.0.0",
    "pytest-cov>=4.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["mcp_xpra_server"]
exclude = ["tests/**"]
